# drawing-basic-shapes

draw-polygon/: CMakeLists.txt  main.cpp
draw-triangle-strip/: CMakeLists.txt  main.cpp
drawing-circle/: CMakeLists.txt  main.cpp
drawing-line/: CMakeLists.txt  main.cpp
drawing-line-strip-and-loop/: CMakeLists.txt  main.cpp
drawing-point/: CMakeLists.txt  main.cpp
drawing-quad/: CMakeLists.txt  main.cpp
drawing-triangle/: drawing-triangle.sln
drawing-triangle-fan/: CMakeLists.txt  main.cpp
drawing-triangle/drawing-triangle/: drawing-triangle.cpp  drawing-triangle.vcxproj  drawing-triangle.vcxproj.filters
drawing-triangle/drawing-triangle/x64/Debug/: drawing-triangle.exe.recipe  drawing-triangle.ilk  vc143.idb
drawing-triangle/drawing-triangle/x64/Debug/drawing-triangle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  drawing-triangle.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
use-gl-in-clion/: CMakeLists.txt  main.cpp
